# AUTO-DOCX

./: .gitignore  123102115_Lab 2.docx  Lab 2.docx  Lab 2.ipynb  README.md  pyproject.toml  requirements.txt
src/auto_docx/: __init__.py  __main__.py  document.py  executor.py  notebook_runner.py  runner.py
src/auto_docx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
